--- a/ningaloo/client/home/home.html
+++ b/ningaloo/client/home/home.html
@@ -3,7 +3,7 @@
 
   <div id="logincontainer">
     <div class="homelogin">
-      <div id="username" contenteditable>avinoz</div>
+      <div id="username" contenteditable>James</div>
     </div>
     <div class="homelogin">
       <div id="password" contenteditable>**********</div>
